--- a/calculator.html
+++ b/calculator.html
@@ -21,8 +21,9 @@
         }
     </script>
 <style>
+
     .calculator{
-        marging:auto;
+        margin-left: 450px;
         text-align: center;
         height: 450px;
         width: 300px;
